# asterisk-demo

./: .env.compose.example  .gitignore  docker-compose.yaml
ceph-asterisk/: .env.compose.example  .env.fastapi.example  .env.ldap.example  .env.mysql.example  .gitignore  README.md  alembic.ini  pyproject.toml
ceph-asterisk/app/: main.py
ceph-asterisk/app/constants/: asterisk_builtin_sounds.py
ceph-asterisk/app/core/: config.py  database.py  elastic.py  ldap_auth.py  security.py
ceph-asterisk/app/models/: __init__.py  ast_conf.py  ast_conf_history.py  asterisk_instance.py  audio_files.py  cdr.py  extension_forwarding.py  extension_settings.py  feature_codes_settings.py  incoming_route.py  sip_user.py  user.py
ceph-asterisk/app/routes/: audio_files.py  auth.py  business_settings.py  cdr.py  dialplan.py  forwarding.py  logs.py  queues.py  templates.py  users.py  voicemail.py
ceph-asterisk/app/schemas/: LDAP_user.py  asterisk.py  audio_file.py  auth.py  cdr.py  dialplan.py  feature_codes.py  forwarding.py  incoming_route.py  logs.py  queue.py  sip.py  template.py  user.py  voicemail.py
ceph-asterisk/app/services/: ast_config_history.py  asterisk_reload.py  default_user.py  dialplan_contexts.py  extension_routing.py  extension_settings.py  feature_codes.py  filebeat_config.py  forwarding_config.py  incoming_routes.py  incoming_routes_crud.py  instance_cdr_cleanup.py  instance_cleanup.py  instance_compose.py  instance_container.py  instance_default_configs.py  (+18 more)
ceph-asterisk/deploy/: dockerfile.web  entrypoint.sh  init.sh
ceph-asterisk/migrations/: env.py
(+174 files in other folders)
