[project]
name = "ceph-asterisk4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.3",
    "docker>=7.1.0",
    "elasticsearch[async]<9.0.0",
    "fastapi>=0.121.3",
    "ldap3>=2.9.1",
    "loguru>=0.7.3",
    "panoramisk>=1.4",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.24",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
